# map_api

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING  Makefile  README.md  dependencies.rosinstall  dependencies.yaml  manifest.xml  matched2dExample.in  merge_remote_branch.sh  package.xml  subtree_multiagent_mapping.rosinstall  test.dot  unmatched2dExample.in
aslam_map_manager/map_api/: CMakeLists.txt  package.xml
aslam_map_manager/map_api/cmake/: FindPoco.cmake  dependencies.cmake
aslam_map_manager/map_api/discovery-server/: discovery-server.cc
aslam_map_manager/map_api/doc/: net-design-doc.tex
aslam_map_manager/map_api/proto/: chord-index.proto  chunk.proto  core.proto  net-table.proto
aslam_map_manager/map_api/src/: cache-base.cc  chord-index.cc  chunk-manager.cc  chunk-transaction.cc  chunk.cc  core.cc  cr-table-interface.cc  cr-table-ram-cache.cc  cr-table.cc  (+40 more)
aslam_map_manager/map_api_benchmarks/: CMakeLists.txt  package.xml
aslam_map_manager/map_api_test_suite/: CMakeLists.txt
aslam_map_manager/visual_inertial_map_structure/: CMakeLists.txt  package.xml
common/multiprocess-gtest/: .gitignore  CMakeLists.txt  README.md  package.xml
dmap/: CMakeLists.txt  README.md  package.xml
dmap-common/: CMakeLists.txt  package.xml
dmap-common/proto/: id.proto
dmap-common/src/: condition.cc  gnuplot-interface.cc  hash-id.cc  reader-first-reader-writer-lock.cc  reader-writer-lock.cc  threadsafe-cache.cc  unique-id.cc
dmap/discovery-server/: discovery-server.cc
dmap/doc/: local-transaction.tex  net-design-doc.tex  tcies-report-snippets.tex
dmap/proto/: chord-index.proto  chunk.proto  command-rpc.proto  core.proto  ipc.proto  net-table.proto
dmap/src/: cache-base.cc  chord-index.cc  chunk-base.cc  chunk-data-container-base.cc  chunk-manager.cc  chunk-transaction.cc  core.cc  file-discovery.cc  hub.cc  ipc.cc  legacy-chunk-data-container-base.cc  legacy-chunk-data-ram-container.cc  legacy-chunk-data-stxxl-container.cc  legacy-chunk.cc  logical-time.cc  message.cc  net-table-index.cc  net-table-manager.cc  net-table-transaction.cc  net-table.cc  network-data-log-plotter.cc  peer-handler.cc  peer-id.cc  peer.cc  proto-table-file-io.cc  revision.cc  rpc-command-registerer.cc  server-discovery.cc  spatial-index-cell-data.cc  spatial-index.cc  table-descriptor.cc  transaction.cc  view.cc  workspace.cc
dmap/test/: cache_and_transaction_test.cc  cache_test.cc  chord_index_test.cc  chunk_data_container_test.cc  chunk_test.cc  core_test.cc  discovery_test.cc  dmap_fixture.h  dmap_fixture_inl.h  hub_test.cc  local_transaction_test.cc  net_table_fixture.h  net_table_fixture_inl.h  net_table_test.cc  proto_stl_stream_test.cc  proto_table_file_io_test.cc  spatial_index_test.cc  test_chord_index.cc  transaction-test.cc  workspace_test.cc
map-api/: CMakeLists.txt  README.md  package.xml
map-api-common/: CMakeLists.txt  package.xml
map-api-common/proto/: id.proto
map-api-common/src/: condition.cc  gnuplot-interface.cc  hash-id.cc  reader-first-reader-writer-lock.cc  reader-writer-lock.cc  threadsafe-cache.cc  unique-id.cc
map-api/debug-scripts/: bt-threads.sh
map-api/discovery-server/: discovery-server.cc
map-api/proto/: chord-index.proto  chunk.proto  command-rpc.proto  core.proto  ipc.proto  net-table.proto  raft.proto
map-api/src/: app-templates.cc  cache-base.cc  chord-index.cc  chunk-base.cc  chunk-data-container-base.cc  chunk-data-ram-container.cc  chunk-data-stxxl-container.cc  chunk-manager.cc  chunk-transaction.cc  chunk.cc  core.cc  cr-table-ram-map.cc  cr-table-stxxl-map.cc  cr-table.cc  cru-table-ram-map.cc  cru-table-stxxl-map.cc  cru-table.cc  file-discovery.cc  hub.cc  ipc.cc  legacy-chunk-data-container-base.cc  legacy-chunk-data-ram-container.cc  legacy-chunk-data-stxxl-container.cc  legacy-chunk.cc  logical-time.cc  message.cc  multi-chunk-commit.cc  multi-chunk-transaction.cc  net-table-index.cc  net-table-manager.cc  net-table-transaction.cc  net-table.cc  network-data-log-plotter.cc  peer-handler.cc  peer-id.cc  peer.cc  proto-table-file-io.cc  raft-chunk-data-ram-container.cc  raft-chunk.cc  raft-node.cc  (+15 more)
map-api/test/: cache_and_transaction_test.cc  cache_test.cc  chord_index_test.cc  chunk_data_container_test.cc  chunk_test.cc  consensus_fixture.h  consensus_fixture_inl.h  core_test.cc  discovery_test.cc  hub_test.cc  local_transaction_test.cc  map_api_fixture.cc  map_api_fixture.h  map_api_fixture_inl.h  net_table_fixture.cc  net_table_fixture.h  net_table_fixture_inl.h  net_table_test.cc  proto_stl_stream_test.cc  proto_table_file_io_test.cc  raft_test.cc  reader_writer_lock_test.cc  reader_writer_mutex_fixture.h  reader_writer_mutex_fixture_inl.h  spatial_index_test.cc  table_data_container_test.cc  table_interface_test.cc  test_chord_index.cc  test_hash_id_hashing.cc  test_table.cc  transaction-test.cc  visual-frame-resource-loader-test.cc  visual_frame_resource_loader_fixture.h  workspace_test.cc
map_api/: CMakeLists.txt  package.xml
map_api/cmake/: FindGLog.cmake  FindZeroMQ.cmake  dependencies.cmake
map_api/demo/: single-posegraph-client.cc
map_api/doc/: design-doc.tex
map_api/proto/: core.proto
map_api/src/: cr-table-interface.cc  cru-table-interface.cc  hash.cc  history.cc  map-api-core.cc  map-api-hub.cc  map-manager.cc  metatable.cc  revision.cc  spatial-index.cc  table-field.cc  table-insert-query.cc  table-interface.cc  time.cc  transaction.cc  write-only-table-interface.cc
map_api/test/: core_test.cpp  hash_test.cpp  simple_test.cpp  spatial_index_test.cc  table_interface_test.cpp  test_main.cpp  test_table.cpp  transaction_test.cpp
map_api_posegraph/: CMakeLists.txt  package.xml
map_api_posegraph/cmake/: FindGFlags.cmake
map_api_posegraph/demo/: single-posegraph-client.cc
map_api_posegraph/include/: edge-table.h  frame-table.h
map_api_posegraph/proto/: posegraph.proto
map_api_posegraph/src/: edge-table.cc  edge.cc  frame-table.cc  frame.cc  mission-adder.cc  pose-graph.cc
map_api_posegraph/test/: test_main.cpp  test_posegraph_test.cpp
multiprocess-gtest/: CMakeLists.txt  package.xml
(+434 files in other folders)
