<package>
  <name>aslam_posegraph</name>
  <version>0.0.1</version>
  <description>aslam posegraph implementation</description>
  <maintainer email="simon.lynen@mavt.ethz.ch">Simon Lynen</maintainer>
  <maintainer email="dev@titus-c.ch">Titus Cieslewski</maintainer>
  <maintainer email="mdymczyk@gmail.com">Marcin Dymczyk</maintainer>

  <license>ASL 2.0</license>

  <url type="website">https://github.com/ethz-asl/aslam_posegraph</url>
  <url type="bugtracker">https://github.com/ethz-asl/aslam_posegraph/issues</url>

  <author>Simon Lynen</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>GLog</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>kindr</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>GLog</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>kindr</run_depend>
</package>
