<?xml version="1.0"?>
<package>
  <name>ceres_error_terms</name>
  <version>0.0.0</version>
  <description>The ceres_error_terms package</description>

  <maintainer email="simon.lynen@gmail.com">Simon Lynen</maintainer>
  <maintainer email="dev@titus-c.ch">Titus Cieslewski</maintainer>
  <maintainer email="mdymczyk@gmail.com">Marcin Dymczyk</maintainer>

  <license>New BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <build_depend>ceres</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>kindr</build_depend>
  <build_depend>glog</build_depend>
</package>
