<package>
  <name>ceres_error_terms</name>
  <version>0.0.0</version>
  <description>The ceres_error_terms package</description>

  <maintainer email="simon.lynen@gmail.com">Simon Lynen</maintainer>
  <maintainer email="dev@titus-c.ch">Titus Cieslewski</maintainer>
  <maintainer email="mdymczyk@gmail.com">Marcin Dymczyk</maintainer>

  <license>New BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <build_depend>ceres_catkin</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>kindr_catkin</build_depend>
  <build_depend>GLog</build_depend>
</package>
