<?xml version="1.0"?>
<package format="2">
  <name>dmap_common</name>
  <version>0.0.0</version>
  <description>Library for making Map API compatible libraries.</description>
  <maintainer email="dev@titus-c.ch">tcies</maintainer>
  <license>closed</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>protobuf_catkin</depend>
</package>
