<?xml version="1.0"?>
<package>
  <name>dmap</name>
  <version>0.0.0</version>
  <description>The aslam dmap package</description>

  <maintainer email="dev@titus-c.ch">tcies</maintainer>
  <maintainer email="anwar.quraishi@epfl.ch">aqurai</maintainer>
  <license>closed</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>dmap_common</build_depend>
  <build_depend>eigen_catkin</build_depend>
  <build_depend>eigen_checks</build_depend>
  <build_depend>gflags_catkin</build_depend>
  <build_depend>glog_catkin</build_depend>
  <build_depend>stxxl_catkin</build_depend>
  <build_depend>multiprocess_gtest</build_depend>
  <build_depend>protobuf_catkin</build_depend>
  <build_depend>zeromq_catkin</build_depend>
</package>
