<?xml version="1.0"?>
<package>
  <name>map_api</name>
  <version>0.0.0</version>
  <description>The aslam map api package</description>

  <maintainer email="simon.lynen@gmail.com">simonlynen</maintainer>
  <maintainer email="dev@titus-c.ch">tcies</maintainer>
  <maintainer email="anwar.quraishi@epfl.ch">aqurai</maintainer>
  <license>closed</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>eigen_catkin</build_depend>
  <build_depend>gflags_catkin</build_depend>
  <build_depend>glog_catkin</build_depend>
  <build_depend>stxxl_catkin</build_depend>
  <build_depend>multiprocess_gtest</build_depend>
  <build_depend>multiagent_mapping_common</build_depend>
  <build_depend>protobuf_catkin</build_depend>
  <build_depend>sm_common</build_depend>
  <build_depend>statistics</build_depend>
  <build_depend>timing</build_depend>
  <build_depend>zeromq_catkin</build_depend>

</package>
