<?xml version="1.0"?>
<package format="2">
  <name>multiprocess_gtest</name>
  <version>0.0.0</version>
  <description>Enables testing a multi-process system with gtest</description>
  <maintainer email="dev@titus-c.ch">tcies</maintainer>
  <maintainer email="simon.lynen@gmail.com">simonlynen</maintainer>
  <license>closed</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
</package>
