<?xml version="1.0"?>
<package format="2">
  <name>multiprocess_gtest</name>
  <version>0.0.0</version>
  <description>Enables testing a multi-process system with gtest</description>
  <maintainer email="titus@ifi.uzh.ch">Titus Cieslewski</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
</package>
