<?xml version="1.0"?>
<package>
  <name>map_api</name>
  <version>0.0.0</version>
  <description>The aslam map api package</description>

  <maintainer email="stephane.magnenat@mavt.ethz.ch">Stéphane Magnenat
  </maintainer>
  <maintainer email="slynen@ethz.ch">Simon Lynen</maintainer>
  <maintainer email="dev@titus-c.ch">Titus Cieslewski</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>sm_common</build_depend>
  
  <build_depend>glog_catkin</build_depend>
  <build_depend>protobuf_catkin</build_depend>
  <build_depend>zeromq_catkin</build_depend>
  <build_depend>poco_catkin</build_depend>

</package>
